# mcharness

./: .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  branding.json  commit_message.txt  conftest.py  playwright.config.js  pyproject.toml
docs/: architecture.md  branding.md  captain_mode.md  demo_script.md  marius_cli.md  marius_desktop_tauri.md  marius_google_agent_search.md  marius_grounding.md  marius_slack_future.md  marius_v3_old_code_recovery.md  mcharness_agent_registry.md  mcharness_captain_deck.md  mcharness_cockpit_api_map.md  mcharness_jules_remote_lane.md  mcharness_private_codex_runner_smoke.md  mcharness_public_cockpit_runbook.md  quickstart.md  release_candidate_report.md  release_checklist.md  ui_showcase_notes.md  warden_agent_start_protocol.md  warden_agents_model.md  warden_assistant.md  warden_captain_loop.md  warden_demo_script.md  warden_frontend_control_room.md  warden_memory.md  warden_memory_examples.md  warden_memory_style.md  warden_mission_control_api.md  warden_notion_sync.md  warden_operator_smoke.md  warden_proof_gates.md  warden_repo_layout.md  warden_run_history_and_evidence.md  workbench_core.md  x_launch_draft.md
mcharness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: demo_captain_mode.py  demo_marius_desktop.py  fake_worker.py  google_agent_search_doctor.sh  install_marius_user.sh  marius  marius_brain_discovery_probe.py  marius_brain_discovery_setup.py  marius_brain_gcs_setup.sh  marius_chat.py  rebuild_brain_exports.py  verify_marius_desktop_backend.py  warden-brain-mcp  (+1 more)
(+185 files in other folders)
